# BrainPad

./: BrainPad.pro  BrainPad.pro.user.ac85f3d  BrainPad.pro.user.b73c511  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  answer.cpp  answer.h  answer.ui  appresources.qrc  brainfktoc.cpp  brainfktoc.h  console.ui  consoledialog.cpp  consoledialog.h  consoledialog.ui  interpreter.cpp  lex.cpp  lex.h  main.cpp  mainwindow.cpp  mainwindow.cpp.K11184  mainwindow.h  mainwindow.ui  syntaxhighlighter.cpp  syntaxhighlighter.h  syntaxhighlighterdark.cpp  syntaxhighlighterdark.h
